fix: remove break spaces on smaller widths

--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -19,7 +19,6 @@
     width: 100%;
     align-items: center;
     text-align: center;
-    white-space: break-spaces;
   }
 }
 
